--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Poppins;
-    background-image: url('/src/images/bg.jpg');
+    background-image: url('/src/images/pexels-photo-3761178.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
